miniscript/src/snapshots/miniscript__tests__print.snap
---
source: miniscript/src/tests.rs
expression: result
---
print 1 + 2
------
0: $0 = 1         |  1
1: $1 = 2         |  2
2: $0 = $0 + $1   |  1 + 2
3: $0 = print $0  |  print 1 + 2
4: return         |  
